<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/headerRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="110dp">

            <View
                android:id="@+id/topAccentView"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/colorAccent" />

            <ImageView
                android:id="@+id/pageIconImageView"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:src="@drawable/rounded_fever_icon" />

            <com.patientcard.views.customviews.TitilliumLightTextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/topAccentView"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/pageIconImageView"
                android:textColor="@android:color/white"
                android:textSize="21sp" />

            <com.patientcard.views.customviews.TitilliumLightTextView
                android:id="@+id/pageTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/topAccentView"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/pageIconImageView"
                android:text="@string/add_examination"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </RelativeLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp">

            <com.patientcard.views.customviews.TitilliumSemiBoldTextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_frame_white_with_grey_border">

                <LinearLayout
                    android:id="@+id/feverCardTableFrameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_frame_white_with_grey_border"
                    android:orientation="horizontal">

                    <com.patientcard.views.customviews.TitilliumLightTextView
                        android:id="@+id/pulseLabelTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/pulse"
                        android:textColor="@color/colorPulse"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryGrey" />

                    <com.patientcard.views.customviews.TitilliumLightTextView
                        android:id="@+id/temperatureLabelTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/temperature"
                        android:textColor="@color/colorTemperature"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feverCardEditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <com.patientcard.views.customviews.TitilliumLightEditText
                        android:id="@+id/pulseEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:inputType="number"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryGrey" />

                    <com.patientcard.views.customviews.TitilliumLightEditText
                        android:id="@+id/temperatureEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/checkFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="22dp"
        android:visibility="visible"
        app:elevation="0dp"
        app:fab_addButtonColorNormal="@color/colorAccent"
        app:fab_addButtonColorPressed="@color/colorPrimary"
        app:fab_addButtonPlusIconColor="@android:color/white"
        app:srcCompat="@drawable/check_icon" />

</RelativeLayout>

