...
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/shortFeverRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/feverCardTableFrameLayout"
                android:nestedScrollingEnabled="false" />

            <LinearLayout
...

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="22dp"
...
