...
    <string name="id_email">Identyfikator / E-mail</string>
    <string name="password">Hasło</string>
    <string name="scan_patient_qr_code">Zeskanuj QR kod pacjenta</string>
    <string name="pesel_placeholder">95011916435</string>
    <string name="fever_card">KARTA GORĄCZKOWA</string>
    <string name="add_examination">DODAJ BADANIE</string>
    <string name="examination">Badanie</string>
    <string name="recommendation_card">KARTA ZLECEŃ LEKARSKICH</string>
    <string name="add_recommendation">DODAJ ZLECENIE LEKARSKIE</string>
    <string name="observation_card">KARTA CIĄGŁEJ OBSERWACJI</string>
    <string name="add_observation">DODAJ OBSERWACJE</string>
    <string name="new_fever_card">Nowe badanie</string>
    <string name="more">WIĘCEJ</string>
...
